--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-accent-color: #d20d0d;
-    --secondary-accent-color: #d55050;
-    --tertiary-accent-color: #d36e6e;
-    --tertiary-accent-color-opacity: rgba(211, 110, 110, 0.8);
+    --primary-accent-color: #0d45d2;
+    --secondary-accent-color: #3c67c5;
+    --tertiary-accent-color: #657bb2;
+    --tertiary-accent-color-opacity: rgba(13, 69, 210, 0.8);
 
     --primary-background-color: #fff;
     --secondary-background-color: #f8f8f8;
@@ -349,6 +349,23 @@ button {
     margin-bottom: 0;
 }
 
+.bulleted-list-card-9:nth-child(1),
+.bulleted-list-card-9:nth-child(2),
+.bulleted-list-card-9:nth-child(4),
+.bulleted-list-card-9:nth-child(5) {
+    border-width: 0 1px 1px 0;
+}
+
+.bulleted-list-card-9:nth-child(3),
+.bulleted-list-card-9:nth-child(6) {
+    border-width: 0 0 1px 0;
+}
+
+.bulleted-list-card-9:nth-child(7),
+.bulleted-list-card-9:nth-child(8) {
+    border-width: 0 1px 0 0;
+}
+
 .bulleted-list-card-6:nth-child(1),
 .bulleted-list-card-6:nth-child(2) {
     border-width: 0 1px 1px 0;
@@ -409,7 +426,16 @@ button {
     .bulleted-list-card-6:nth-child(2),
     .bulleted-list-card-6:nth-child(3),
     .bulleted-list-card-6:nth-child(4),
-    .bulleted-list-card-6:nth-child(5) {
+    .bulleted-list-card-6:nth-child(5),
+    .bulleted-list-card-9:nth-child(1),
+    .bulleted-list-card-9:nth-child(2),
+    .bulleted-list-card-9:nth-child(3),
+    .bulleted-list-card-9:nth-child(4),
+    .bulleted-list-card-9:nth-child(5),
+    .bulleted-list-card-9:nth-child(6),
+    .bulleted-list-card-9:nth-child(7),
+    .bulleted-list-card-9:nth-child(8),
+    .bulleted-list-card-9:nth-child(9) {
         border-width: 0 0 1px 0;
     }
 }
